fix: set visibility hidden instead of display none

--- a/source/sass/component/_option.scss
+++ b/source/sass/component/_option.scss
@@ -157,7 +157,7 @@ $c-option-success-color: var(--c-option-success-color, var(--color-success, $col
         appearance: none;
         height: 0;
         width: 0;
-        display: none;
+        visibility: hidden;
 
         &:focus-visible {
             outline: none;
